# alpha-micrograd-rust

./: .gitignore  Cargo.toml  LICENSE.md  README.md  profile.sh
benches/: matmul.rs
benches/criterion/: itersum.rs  learning.rs  main.rs  matmul.rs
docs/: storage.md
examples/: backpropagation.rs  layer.rs  mlp.rs  neuron.rs  operations.rs
src/: compiled.rs  lib.rs  multi_value.rs  neuron.rs  nn.rs  operations.rs  tensor_nn.rs  tensors.rs  value.rs  valuev2.rs
