[package]
name = "alpha-micrograd-rust"
authors = ["Alpha"]
version = "0.4.0"
edition = "2021"
description = "Expression tree, automatic gradients, neural networks, layers and perceptrons."
readme = "README.md"
repository = "https://github.com/AlphaGit/alpha-micrograd-rust/"
license = "MIT"
keywords = ["neural-networks", "perceptrons", "layers", "expression-tree"]
categories = ["data-structures", "science"]

[dependencies]
rand = "0.8.5"

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "matmul"
harness = false